fix: temp fix on predictors css for header alignment

--- a/predictors.css
+++ b/predictors.css
@@ -9,8 +9,6 @@
     border-left: 1px solid #e3120b;
     margin-left: 7.5%;
     width: 83.1%;
-    position: absolute;
-    bottom: 0;
     padding: 3px;
 }
 
